add bootstrap, applied layout to the page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#"> Treebook </a>
+			<ul class="nav navbar-nav">
+		      <li><%= link_to "All statuses", statuses_path %></li>
+		      <li><%= link_to 'New Status', new_status_path %></li>
+		  	</ul>
+		</div>
+	</nav>
+	<div class="container">
+		<%= yield %>
+	</div>
 
 </body>
 </html>
