--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the statuses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.status{
+	border-bottom:solid 1px #ccc;
+	padding: 5px 0;
+
+	p{ 
+		margin: 0 0 3px;
+	}
+
+	.admin{
+		display:none;
+	}
+	&.hover{
+		background: #fafafa; 
+		.admin{
+			display:inline;
+		}
+	}
+}
