--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
 		</div>
 	</nav>
 	<div class="container">
+	<p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 		<%= yield %>
 	</div>
 
